--- a/test.css
+++ b/test.css
@@ -1,44 +1,53 @@
-.studiegallery {
+.row {
+  display: flex;
+  justify-content: center; /* Center aligns the mini gallery horizontally */
+}
+
+.column {
+  float: left;
+  width: 15%;
+  padding: 10px;
+  overflow: hidden;
+}
+
+/* Style the images inside the grid */
+.column img {
+  opacity: 0.8;
+  cursor: pointer;
   width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.studieimgbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: auto;
 }
 
-.studieimg {
-  width: 100px;
-  height: 275px;
-  margin: 10px;
-  border-radius: 50px;
-  background: url(billeder/studiestart1.png);
-  background-size: cover;
-  background-position: center;
-  transition: width 0.5s;
+.column img:hover {
+  opacity: 1;
 }
-.studieimg:nth-child(2) {
-  background: url(billeder/studiestart2.png);
-  background-size: cover;
-  background-position: center;
-}
-.studieimg:nth-child(3) {
-  background: url(billeder/studiestart3.png);
-  background-size: cover;
-  background-position: center;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-.studieimg:nth-child(4) {
-  background: url(billeder/studiestart4.png);
-  background-size: cover;
-  background-position: center;
+/* The expanding image container (positioning is needed to position the close button and the text) */
+.container {
+  position: relative;
+  display: none;
 }
 
-.studieimg:hover {
-  width: 404px;
+/* Expanding image text */
+#imgtext {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  color: white;
+  font-size: 20px;
+}
+
+/* Closable button inside the image */
+.closebtn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: white;
+  font-size: 35px;
   cursor: pointer;
 }
