--- a/design.css
+++ b/design.css
@@ -248,20 +248,21 @@ input[type="checkbox"] {
   display: none;
 }
 .logopic {
-  background-image: url(billeder/idalogo.png);
-  width: 128px;
+  background-image: url(billeder/logovec.svg);
+  width: 109px;
   aspect-ratio: 2/1;
   background-size: cover;
   position: absolute;
-  top: 1.5%;
-  left: 3%;
+  top: 3.5%;
+  left: 4%;
   z-index: 1001;
+  height: 8.6%;
 }
 
 /* ANDET PÅ SIDERNE  */
 
 .crystal {
-  background-image: url(billeder/crystalfdone.png);
+  background-image: url(billeder/crystalfdone.webp);
   width: 18.3%;
   aspect-ratio: 3/6;
   background-size: cover;
@@ -306,7 +307,7 @@ footer {
 }
 
 .instagram {
-  background-image: url(billeder/bruninsta.png);
+  background-image: url(billeder/bruninsta.webp);
   background-size: cover;
   width: 44.5%;
   height: 134%;
@@ -316,7 +317,7 @@ footer {
 }
 
 .facebook {
-  background-image: url(billeder/brunface.png);
+  background-image: url(billeder/brunface.webp);
   background-size: cover;
   width: 44.5%;
   height: 134%;
@@ -326,7 +327,7 @@ footer {
 }
 
 .twitter {
-  background-image: url(billeder/bruntwitter.png);
+  background-image: url(billeder/bruntwitter.webp);
   background-size: cover;
   width: 44.5%;
   height: 134%;
@@ -426,6 +427,10 @@ footer {
   transition: 0.5s ease-in;
 }
 
+.knapbbypink:hover .knaptxt {
+  padding-top: 4.5%;
+}
+
 .knapbbypink:hover {
   left: 369%;
   border: 5px solid #ea667f;
@@ -499,18 +504,19 @@ footer {
 /**INDHOLD PÅ INDEX SIDEN**/
 
 .indexlogo {
-  background-image: url(billeder/idalogo.png);
+  background-image: url(billeder/logovec.svg);
   background-size: cover;
-  width: 43%;
-  height: 70%;
-  margin-top: 7%;
+  width: 42%;
+  height: 56.1%;
+  position: relative;
+  margin-top: 9%;
   margin-left: 19%;
 }
 .indexportfolio {
   font-family: "al_nevrada_personuploadedfile";
   color: #6e3e03;
   font-size: 265%;
-  margin-top: -19%;
+  margin-top: -18%;
   margin-left: 46%;
 }
 
@@ -518,7 +524,7 @@ footer {
   font-family: "playfair_displayregular";
   color: #6e3e03;
   font-size: 116%;
-  margin-top: 12.5%;
+  margin-top: 14.5%;
   margin-left: 11%;
 }
 
@@ -1027,8 +1033,10 @@ footer {
 
   .logopic {
     margin-left: -1%;
-    top: 0%;
+    top: 1.5%;
     position: fixed;
+    width: 27.5%;
+    height: 6%;
   }
 
   nav .drop-down1.closed {
@@ -1158,10 +1166,10 @@ footer {
   .indexlogo {
     position: absolute;
     z-index: 3;
-    top: 29%;
-    width: 93%;
-    height: 31%;
-    left: -23%;
+    top: 33%;
+    width: 78.8%;
+    height: 21%;
+    left: -15%;
   }
   .indexportfolio {
     font-size: 177%;
